--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,21 @@ dependencies {
     compile 'com.android.support:design:25.+'
 
 //    compile 'com.alibaba:fastjson:1.1.34.android'
+
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.google.code.gson:gson-parent:2.7'
+    //RxAndroid1/RxJava1
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    //butterknife
+//    compile 'com.jakewharton:butterknife:8.4.0'
+    //retrofit2
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:converter-scalars:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    //okhttp3
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okio:okio:1.8.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 }
