--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity.MainActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleInstance"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
