--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-//        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,7 +16,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-    }
+        maven { url "https://www.jitpack.io"}
+        }
 }
 
 task clean(type: Delete) {
@@ -24,5 +25,5 @@ task clean(type: Delete) {
 }
 
 ext {
-    dbflowVersion = '3.0.1'
+    dbflowVersion = '4.0.2'
 }
