--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 import java.text.SimpleDateFormat
 
 apply plugin: 'com.android.application'
-//apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
 
 def verName = "1.0.0"
 
 def buildTime() {
-    def df = new SimpleDateFormat("yyMMddHHmm")
+    def df = new SimpleDateFormat("yyyyMMddHH")
     df.setTimeZone(TimeZone.getTimeZone("UTC+08:00"))
     return df.format(new Date())
 }
 
 def apkSuffix() {
-    def df = new SimpleDateFormat("yyMMdd")
+    def df = new SimpleDateFormat("yyyyMMdd")
     df.setTimeZone(TimeZone.getTimeZone("UTC+08:00"))
     return df.format(new Date())
 }
@@ -37,7 +37,7 @@ android {
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             def outputFile = output.outputFile
-            if (outputFile != null && outputFile.name.endsWith('-debug.apk')) {
+            if (outputFile != null && outputFile.name.endsWith('-release.apk')) {
                 output.outputFile = new File(outputFile.parent, outputFile.name.replace(".apk", "-" + defaultConfig.versionName + ".apk"));
                 outputFile.delete()
             }
@@ -73,6 +73,12 @@ dependencies {
     compile(name:'onyxsdk-base-release', ext:'aar')
     compile(name:'onyxsdk-data-release', ext:'aar')
     compile(name:'onyxsdk-reader-release', ext:'aar')
+    compile(name:'chinese-analyzer-release', ext:'aar')
+    compile(name:'alreader-engine-release', ext:'aar')
+    compile(name:'cropimage-release', ext:'aar')
+//    compile(name:'onyxsdk-ui-release', ext:'aar')
+
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -107,14 +113,11 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 
     //DBFlow
-    annotationProcessor 'com.raizlabs.android:DBFlow-Compiler:2.2.1'
-    compile "com.raizlabs.android:DBFlow-Core:2.2.1"
-    compile "com.raizlabs.android:DBFlow:2.2.1"
-//    apt "com.github.Raizlabs.DBFlow:dbflow-processor:3.0.1"
-//    compile "com.github.Raizlabs.DBFlow:dbflow-core:3.0.1"
-//    compile "com.github.Raizlabs.DBFlow:dbflow:3.0.1"
-
-//    compile 'com.leon:lfilepickerlibrary:1.0'
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:$rootProject.dbflowVersion"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:$rootProject.dbflowVersion"
+    compile "com.github.Raizlabs.DBFlow:dbflow:$rootProject.dbflowVersion"
 
     compile project(path: ':lfilepickerlibrary')
+    compile "com.jakewharton:disklrucache:$rootProject.disklrucacheVersion"
+    compile "org.apache.lucene:lucene-core:$rootProject.lucenecoreVersion"
 }
