--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-//        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +18,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
+        maven { url  "http://dl.bintray.com/dasar/maven" }
+        maven { url "http://mvn.leancloud.cn/nexus/content/repositories/releases" }
     }
 }
 
@@ -24,5 +29,51 @@ task clean(type: Delete) {
 }
 
 ext {
+    // Sdk and tools
+    minSdkVersion = 15
+    targetSdkVersion = 23
+    compileSdkVersion = 25
+    buildToolsVersion = '25.0.2'
+
+    // App dependencies
+    apachecommonsVersion = '4.0'
+    butterknifeVersion = '7.0.1'
+    commonsioVersion = '2.5'
+    circleimageviewVersion = '2.1.0'
     dbflowVersion = '3.0.1'
+    disklrucacheVersion = '2.0.2'
+    eventbusVersion = '3.0.0'
+    fastjsonVersion = '1.1.34.android'
+    filedownloaderVersion = '0.3.4'
+    junitVersion = '4.12'
+    juniversalchardetVersion = '1.0.3'
+    leakcanaryVersion = '1.4-beta2'
+    lucenecoreVersion = '2.9.4'
+    retrofit2Version = '2.1.0'
+    ruedigermoellerfstVersion = '2.47'
+    supportLibraryVersion = '25.0.1'
+    zip4jVersion = '1.3.2'
+    constraintlayoutVersion = '1.0.0-beta4'
+    okhttpurlconnectionVersion = '2.0.0'
+    picassoVersion = '2.5.2'
+    multidexVersion = '1.0.1'
+    espressoVersion = '2.2.2'
+    easyPermissonVersion = '0.2.1'
+    mpAndroidChart = '3.0.1'
+
+    //compatible
+    compatibleSdkVersion = 23 // for projects which can't be built with sdk 24+
+    compatibleSupportLibraryVersion = '23.4.0' // for projects which can't be built with sdk 24+
+
+    aliyunOssSdkVersion = '2.3.0'
+    wechatSdkWithMtaVersion = '1.0.2'
+
+    jsoupVersion = '1.10.2'
+    slf4jVersion = '1.7.12'
+    epublibVersion = "1.0"
+
+    phone_supportLibraryVersion = '25.1.1'
+    phone_materialDialogsCommonVersion= '0.9.3.0'
+
+    avoscloudVersion = 'v3.13.7'
 }
