--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 import java.text.SimpleDateFormat
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'com.neenbedankt.android-apt'
 
 def verName = "1.0.0"
 
@@ -111,11 +111,11 @@ dependencies {
     //LeakCanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
-
-    //DBFlow
-    apt "com.github.Raizlabs.DBFlow:dbflow-processor:$rootProject.dbflowVersion"
-    compile "com.github.Raizlabs.DBFlow:dbflow-core:$rootProject.dbflowVersion"
-    compile "com.github.Raizlabs.DBFlow:dbflow:$rootProject.dbflowVersion"
+//
+//    //DBFlow
+//    apt "com.github.Raizlabs.DBFlow:dbflow-processor:$rootProject.dbflowVersion"
+//    compile "com.github.Raizlabs.DBFlow:dbflow-core:$rootProject.dbflowVersion"
+//    compile "com.github.Raizlabs.DBFlow:dbflow:$rootProject.dbflowVersion"
 
     compile project(path: ':lfilepickerlibrary')
     compile "com.jakewharton:disklrucache:$rootProject.disklrucacheVersion"
