--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.onyx.test.mytest.activity.MainActivity"
+        <activity android:name=".ui.activity.MainActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection">
@@ -39,7 +39,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.onyx.test.mytest.activity.SettingsActivity"
+        <activity android:name=".ui.activity.SettingsActivity"
                   android:screenOrientation="portrait"
                   android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"/>
 
