--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
 
     <application
-        android:name="com.onyx.test.mytest.MyApplication"
+        android:name="com.onyx.test.mytest.ui.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -43,7 +43,7 @@
                   android:screenOrientation="portrait"
                   android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"/>
 
-        <receiver android:name="com.onyx.test.mytest.receiver.BootCompletedReceiver">
+        <receiver android:name=".ui.receiver.BootCompletedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
