--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,8 +109,8 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 
     //LeakCanary
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+//    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 //
 //    //DBFlow
 //    apt "com.github.Raizlabs.DBFlow:dbflow-processor:$rootProject.dbflowVersion"
