--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,14 @@
 
 
     <application
-        android:name="com.onyx.test.mytest.ui.app.MyApplication"
+        android:name="com.onyx.test.mytest.view.app.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MainActivity"
+        <activity android:name=".view.activity.MainActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection">
@@ -39,11 +39,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activity.SettingsActivity"
+        <activity android:name=".view.activity.SettingsActivity"
                   android:screenOrientation="portrait"
                   android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"/>
 
-        <receiver android:name=".ui.receiver.BootCompletedReceiver">
+        <receiver android:name=".view.receiver.BootCompletedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
