--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'com.android.application'
 //apply plugin: 'com.neenbedankt.android-apt'
 
 def verName = "1.0.0"
+def devStage = "alpha"
 
 def buildTime() {
     def df = new SimpleDateFormat("yyyyMMddHH")
@@ -30,7 +31,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
-        versionName  "${verName}-beta-build-${buildTime()}"
+        versionName  "${verName}-${devStage}-build-${buildTime()}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
