--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,7 +97,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     //butterknife
-    compile 'com.jakewharton:butterknife:7.0.1'
+//    compile 'com.jakewharton:butterknife:7.0.1'
 //    compile 'com.jakewharton:butterknife:8.4.0'
     //retrofit2
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
