--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ ext {
     // Sdk and tools
     minSdkVersion = 15
     targetSdkVersion = 23
-    compileSdkVersion = 25
-    buildToolsVersion = '25.0.2'
+    compileSdkVersion = 26
+    buildToolsVersion = "26.0.1"
 
     // App dependencies
     apachecommonsVersion = '4.0'
