--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ ext {
     lucenecoreVersion = '2.9.4'
     retrofit2Version = '2.1.0'
     ruedigermoellerfstVersion = '2.47'
-    supportLibraryVersion = '25.0.1'
+    supportLibraryVersion = '26.+'
     zip4jVersion = '1.3.2'
     constraintlayoutVersion = '1.0.0-beta4'
     okhttpurlconnectionVersion = '2.0.0'
