--- a/mupdf/src/main/AndroidManifest.xml
+++ b/mupdf/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.jaky.mupdf"
     android:installLocation="auto">
 
@@ -18,8 +19,6 @@
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:icon="@drawable/icon"
-        android:label="@string/app_name"
         android:supportsRtl="true">
 
         <activity
