--- a/mupdf/src/main/AndroidManifest.xml
+++ b/mupdf/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name=".ui.activity.ChoosePDFActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light">
+            android:theme="@android:style/Theme.Holo.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -34,28 +34,6 @@
             android:name=".ui.activity.MuPDFActivity"
             android:label="@string/app_name"
             android:theme="@style/AppBaseTheme">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.VIEW" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-
-                <!--<data android:mimeType="application/vnd.ms-xpsdocument" />-->
-                <!--<data android:mimeType="application/xps" />-->
-            <!--</intent-filter>-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.VIEW" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--<data android:mimeType="application/pdf" />-->
-            <!--</intent-filter>-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.VIEW" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--<data android:mimeType="application/x-cbz" />-->
-            <!--</intent-filter>-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.VIEW" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--<data android:mimeType="application/epub+zip" />-->
-            <!--</intent-filter>-->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -209,14 +187,14 @@
         <activity
             android:name=".ui.activity.OutlineActivity"
             android:label="@string/outline_title"
-            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+            android:theme="@android:style/Theme.Holo.Dialog.NoActionBar">
 
         </activity>
 
         <activity
             android:name=".ui.activity.PrintDialogActivity"
             android:label="@string/print"
-            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+            android:theme="@android:style/Theme.Holo.Dialog.NoActionBar">
 
         </activity>
     </application>
