--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(path: ':lfilepickerlibrary')
     compile project(path: ':mupdf')
+    compile project(path: ':libchm')
 
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
