--- a/mupdf/build.gradle
+++ b/mupdf/build.gradle
@@ -9,6 +9,9 @@ properties.load( inputStream )
 def ndkDir = properties.getProperty('ndk.dir')
 
 android {
+    dataBinding {
+        enabled = true
+    }
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
@@ -62,6 +65,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(path: ':lfilepickerlibrary')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
