use include labal for main tool bar layout.

--- a/mupdf/build.gradle
+++ b/mupdf/build.gradle
@@ -71,4 +71,7 @@ dependencies {
     })
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     testCompile "junit:junit:$rootProject.junitVersion"
+
+    //https://github.com/Kelin-Hong/MVVMLight
+    compile 'com.kelin.mvvmlight:library:1.0.0'
 }
