--- a/mupdf/src/main/AndroidManifest.xml
+++ b/mupdf/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:supportsRtl="true">
 
         <activity
-            android:name=".ui.activity.ReaderActivity"
+            android:name=".ui.activity.MuPDFActivity"
             android:label="@string/app_name"
             android:theme="@style/AppBaseTheme">
             <intent-filter>
