--- a/mupdf/build.gradle
+++ b/mupdf/build.gradle
@@ -66,6 +66,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(path: ':lfilepickerlibrary')
+    compile project(path: ':libdata')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
