--- a/libutils/build.gradle
+++ b/libutils/build.gradle
@@ -31,4 +31,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile "com.alibaba:fastjson:$rootProject.fastjsonVersion"
+
 }
